--- a/src/library.css
+++ b/src/library.css
@@ -871,6 +871,8 @@
   transition: all 0.3s ease;
 }
 
+/*INICIO RESPONSIVE*/
+
 @media (max-width: 1023px) {
   .inicio-container {
     height: 500px;
@@ -967,9 +969,10 @@
    .inicio-text-2 {
     width: var(--percentage-1);
   }
-}
 
-@media (max-width: 768px) {
+  .hamburger-btn {
+    display: block !important;
+  }
 
   .navbar {
     position: fixed;
@@ -979,18 +982,46 @@
     align-items: center;
     justify-content: center;
     background: rgba(30, 42, 52, 0.95);
-    height: 100vh;
+    min-height:100vh;
     width: 100%;
-    gap: 2rem;
     transition: right 0.4s ease-in-out;
-    display: flex; /* importante mantener flex */
+    display: flex;
   }
 
   .navbar.open {
     right: 0;
     border-left: 1px solid var(--fourth-color);
   }
+}
 
-  .hamburger-btn {
-    display: block;
-  }}
+/*NOSOTROS RESPOSIVE*/
+
+@media (max-width: 768px) {
+  .picture-6,
+  .picture-4,
+  .square {
+    width: 90%;
+    max-width: 300px;
+    margin: 0 auto;
+  }
+
+  .nosotros-section > div:first-child {
+    flex-direction: column; 
+    align-items: center;
+    gap: 2rem;
+  }
+
+  .width-8 {
+    width: 90%;
+    text-align: center;
+  }
+
+  .separator h2 {
+    font-size: 1.5rem;
+  }
+
+  .padding-block-7 > div {
+    flex-direction: column;
+    gap: 1rem;
+  }
+}
