--- a/src/library.css
+++ b/src/library.css
@@ -996,7 +996,7 @@
 
 /*NOSOTROS RESPOSIVE*/
 
-@media (max-width: 768px) {
+@media (max-width: 865px) {
   .picture-6,
   .picture-4,
   .square {
@@ -1011,17 +1011,59 @@
     gap: 2rem;
   }
 
-  .width-8 {
-    width: 90%;
+  .nosotros-text{
+    width: var(--percentage-1);
     text-align: center;
+    font-size: var(--size-1);
+    padding-inline: var(--distance-11);
   }
 
   .separator h2 {
     font-size: 1.5rem;
   }
 
-  .padding-block-7 > div {
+  .company-container {
     flex-direction: column;
-    gap: 1rem;
+    text-align: center;
+    justify-content: center;
+    gap:  var(--distance-1)
   }
 }
+
+/*SERVICIOS RESPONSIVE*/
+
+@media (max-width: 1075px) {
+  .servicios-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .servicios-content-1 {
+    display: flex;
+    flex-direction: column-reverse;
+    text-align: center;
+    justify-content: center;
+    padding-block-end: var(--distance-8);
+  }
+  .servicios-content-2 {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    padding-block-end: var(--distance-8);
+
+  }
+}
+  .servicios-content-1 p {
+    font-size: var(--size-2);
+  }
+  .servicios-content-2 li {
+    font-size: var(--size-2);
+  }
+  .service-content-2-title {
+    font-size: var(--size-3);
+  }
+  .servicios-title {
+    text-align: center;
+  }
