--- a/src/library.css
+++ b/src/library.css
@@ -57,6 +57,8 @@
   padding-inline: var(--distance-11);
 }
 
+.hidden { overflow: hidden;}
+
 /*POSITION*/
 
 .absolute {
@@ -111,6 +113,10 @@
 
 .align-end {
   align-items: flex-end;
+}
+
+.align-start {
+  align-items: flex-start;
 }
 
 .flex-wrap {
@@ -1048,74 +1054,94 @@
 /*SERVICIOS RESPONSIVE*/
 
 @media (max-width: 1075px) {
-  .servicios-container {
-    display: flex;
+  .servicios-content-1,
+  .servicios-content-2,
+  .servicios-content-3 {
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    text-align: center;
+    gap: 2rem;
+    padding-inline: 1.5rem;
   }
 
   .servicios-content-1 {
-    display: flex;
     flex-direction: column-reverse;
-    text-align: center;
-    justify-content: center;
-    font-size: var(--size-1);
-    padding-block-end: var(--distance-8);
-    padding-inline: var(--distance-11);
   }
 
-  .servicios-content-2 {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    justify-content: center;
-    font-size: var(--size-1);
-    padding-block-end: var(--distance-8);
-    padding-inline: var(--distance-11);
-  }
-
-  .servicios-content-3 {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .servicios-content-3 {
-    text-align: center;
-    width: var(--percentage-1);
-  }
-}
-
-@media (max-width: 925px) {
-  .servicios-content-2 {
+  .ul-content {
     width: 100%;
   }
 
-  .servicios-content-1 p {
-    font-size: var(--size-2);
-    width: var(--percentage-1);
+  .servicios-content-2 li {
+    justify-content: center;
+  }
+
+  .servicios-title {
+    text-align: center;
+    font-size: clamp(1.8rem, 4vw, 2.5rem);
+  }
+}
+
+/* Hasta 734px: todo ocupa ancho completo */
+@media (max-width: 734px) {
+  .servicios-content-1,
+  .servicios-content-2,
+  .servicios-content-3 {
+    padding: 1rem;
+    gap: 1.5rem;
+  }
+
+  .servicios-content-1 p,
+  .servicios-content-3 p {
+    width: 100%;
+    font-size: var(--size-1);
+  }
+
+  .picture-7-container {
+    margin-bottom: 0;
+  }
+
+  .picture-7,
+  .picture-9 {
+    width: 100%;
+    max-width: 420px;
   }
 
   .servicios-content-2 li {
-    font-size: var(--size-2);
+    font-size: var(--size-1);
   }
 
   .service-content-2-title {
     font-size: var(--size-3);
   }
 
-  .servicios-title {
-    text-align: center;
-  }
 }
 
-@media (max-width: 734px) {
+@media (max-width: 480px) {
+  .ul-content h4 {
+    font-size: var(--size-2)
+  }
+  .servicios-separator h2 {
+  font-size: var(--size-3);
+ }
+  .servicios-content-1,
+  .servicios-content-2,
+  .servicios-content-3 {
+    padding: 0.8rem;
+    width: 400px;
+  }
+
+  .servicios-content-1 p,
+  .servicios-content-3 p {
+    font-size: 0.95rem;
+  }
+
+  .servicios-content-2 li {
+    font-size: 0.95rem;
+  }
 
   .picture-7,
   .picture-9 {
-    width: 100%;
     max-width: 100%;
-    margin: 0 auto;
   }
 }
 
