--- a/src/pages/nosotros.css
+++ b/src/pages/nosotros.css
@@ -11,3 +11,23 @@
     width: 350px;
     height: auto;
 }
+
+.slide-from-left,
+.slide-from-right {
+  opacity: 0;
+  transform: translateX(0);
+  transition: all 1s ease;
+}
+
+.slide-from-left {
+  transform: translateX(-80px);
+}
+
+.slide-from-right {
+  transform: translateX(80px);
+}
+
+.show {
+  opacity: 1;
+  transform: translateX(0);
+}
