--- a/src/library.css
+++ b/src/library.css
@@ -929,13 +929,21 @@
 }
 
 @media (max-width: 768px) {
-  .video {
-    height: 400px;
+  .inicio-container {
+    padding-block-start: 6rem; /* deja espacio visual debajo del header */
+  }
+
+  .inicio-pictures {
+    display: none;
   }
 
   .inicio-container {
-    height: 400px;
-    padding: 1rem;
+    height: auto; /* deja que el contenido determine altura */
+    padding-block: 4rem 2rem; /* espacio arriba y abajo para no pegar el contenido al header */
+  }
+
+  .video {
+    height: 300px; /* más corto en móviles */
   }
 
   .inicio-content {
@@ -1002,16 +1010,13 @@
   }
 }
 
-@media (max-width: 686px) {
-  .picture-1 {
-    position: relative;
-    width: 400px;
-  }
-}
 
 @media (max-width: 606px) {
-  .picture-1 {
-    display: none;
+  .inicio-text-2 {
+    width: 100%;
+    padding-inline: 1rem;
+    text-align: center;
+    font-size: 1rem;
   }
 }
 
@@ -1090,7 +1095,9 @@
 @media (max-width: 734px) {
   .servicios-container {
     padding-block: 6rem 3rem;
-    /* reduce espacio superior/inferior */
+  }
+  .servicios-title {
+    margin-top: 3rem; 
   }
 
   .container {
@@ -1181,7 +1188,6 @@
   }
 }
 
-
 /*CONTACTO RESPONSIVE*/
 
 @media (max-width: 1286px) {
@@ -1203,11 +1209,15 @@
 }
 
 @media (max-width: 930px) {
+  .container{
+    padding-inline: 6rem;
+  }
   .input-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 100%
   }
 
   .input-message {
@@ -1216,6 +1226,7 @@
 }
 
 @media (max-width: 542px) {
+  
 
   .input-message,
   .input-email,
