--- a/src/pages/contacto.css
+++ b/src/pages/contacto.css
@@ -1,62 +1,61 @@
-.contact-container {
-    position: relative;
-    background-image: url('/public/background-3.jpg');
-    background-size: cover;
-    background-position: bottom;
-    background-repeat: no-repeat;
-    height: 700px;
+CSS .contact-container {
+  position: relative;
+  background-image: url('/public/background-3.jpg');
+  background-size: cover;
+  background-position: bottom;
+  background-repeat: no-repeat;
+  height: 700px;
 }
 
 .contact-container::before {
-    content: "";
-    position: absolute;
-    background: rgba(51, 51, 51, 0.75);
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 1;
+  content: "";
+  position: absolute;
+  background: rgba(51, 51, 51, 0.75);
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
 }
 
 .input-text,
 .input-email {
-    z-index: 2;
-    padding: 10px 15px;
-    width: 350px;
-    height: 40px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-    cursor: pointer;
+  z-index: 2;
+  padding: 10px 15px;
+  width: 350px;
+  height: 40px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
 }
-
 
 .input-message {
-    z-index: 2;
-    padding: 10px 15px;
-    width: 730px;
-    height: 200px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-    cursor: pointer;
+  z-index: 2;
+  padding: 10px 15px;
+  width: 730px;
+  height: 200px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
 }
-.input-text
-.input-email .input-message:hover {
-    outline: none;
-    border-color: var(--fourth-color);
+
+.input-text .input-email .input-message:hover {
+  outline: none;
+  border-color: var(--fourth-color);
 }
 
 .form-title {
-    position: relative;
-    z-index: 2;
+  position: relative;
+  z-index: 2;
 }
 
 .picture-2 {
-    position: relative;
-    z-index: 2;
-    width: 300px;
-    height: auto;
+  position: relative;
+  z-index: 2;
+  width: 300px;
+  height: auto;
 }
 
 .success-message {
@@ -78,6 +77,7 @@
     opacity: 0;
     transform: translateY(-5px);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
