--- a/src/pages/inicio.css
+++ b/src/pages/inicio.css
@@ -1,12 +1,12 @@
 .video{
-  position: absolute;       /* Se mantiene fija al hacer scroll */
+  position: absolute;       
   top: 0;
   left: 0;
   width: 100%;
   height: 700px;
-  object-fit: cover;     /* Cubre todo el fondo sin distorsión */
-  z-index: -1;           /* Va detrás de todo */
-  opacity: 0.7;          /* Leves transparencia opcional */
+  object-fit: cover;    
+  z-index: -1;          
+  opacity: 0.7;         
 }
 
 .inicio-container {
@@ -72,8 +72,6 @@
 .inicio-pictures:empty {
   display: none; 
 }
-
-.picture-1 { position: absolute; right: 5px; top: 90px; z-index: 2; }
 
 .section-container-2 {
   overflow: hidden;
