--- a/src/pages/nosotros.css
+++ b/src/pages/nosotros.css
@@ -1,33 +1,57 @@
 .picture-6 {
-    width: 400px;
-    height: auto;
+  width: 400px;
+  height: auto;
 }
+
 .square {
-    width: 300px;
-    height: 300px; 
+  width: 300px;
+  height: 300px;
 }
 
 .picture-4 {
-    width: 350px;
-    height: auto;
+  width: 350px;
+  height: auto;
 }
 
-.slide-from-left,
-.slide-from-right {
-  opacity: 0;
-  transform: translateX(0);
-  transition: all 1s ease;
+.company-logos {
+    width: auto;
+    height: 80px;
+    margin: 0 20px;
+    transition: .5s;
+    cursor: pointer;
+    flex-shrink: 0;
+    filter: grayscale(100%);
+    object-fit: contain;
 }
 
-.slide-from-left {
-  transform: translateX(-80px);
+.company-logos:hover {
+  filter: grayscale(0%);
 }
 
-.slide-from-right {
-  transform: translateX(80px);
+.company-list {
+  position: relative;
+  display: flex;
+  width: 100%;
+  overflow: hidden;
+  mask-image: linear-gradient(90deg, transparent, #fff 20%, #fff 80%, transparent);
 }
 
-.show {
-  opacity: 1;
-  transform: translateX(0);
+.company-list div {
+  display: flex;
+  align-items: center;
+  flex-shrink: 0;
+  animation: scroll 20s linear infinite;
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(calc(-100% / 3)); /* Mueve solo un tercio */
+  }
+}
+
+.company-list:hover div {
+  animation-play-state: paused;
 }
